--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇯🇵 日本-266.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.34MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-326.9KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
   - {name: 🇬🇧 英国-720.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -66,19 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -89,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -105,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
@@ -130,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
