--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-326.9KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-329.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.39MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
   - {name: 🇬🇧 英国-720.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-384.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-326.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
       - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
