--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-329.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.39MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇬🇧 英国-720.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-384.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇩🇪 德国-764.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-836.7KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 未知国家-5.60MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: afd61db6-01fb-11ed-8000-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 🇸🇬 新加坡-1.46MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-936.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-329.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1015.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 未知国家-5.60MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
