--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-764.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-836.7KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 未知国家-5.60MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: afd61db6-01fb-11ed-8000-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇸🇬 新加坡-1.46MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-609.7KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-163.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-936.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-764.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-836.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 未知国家-5.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
