--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 未知国家-1.88MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: afd61db6-01fb-11ed-8000-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
   - {name: 🇫🇷 法国-609.7KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-163.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.76MB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.05MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-936.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
+      - 未知国家-1.88MB/s(Youtube:不良林)
       - 🇫🇷 法国-609.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-936.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
